[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gambler/gambler.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Cards/2_0.png" type="Texture" id=3]

[node name="gambler" type="Node2D"]
script = ExtResource( 1 )

[node name="image" type="Sprite" parent="."]
visible = false
scale = Vector2( 3.32813, 5.5 )
texture = ExtResource( 2 )
centered = false

[node name="positions" type="Node2D" parent="."]
visible = false

[node name="pos_1" type="Sprite" parent="positions"]
position = Vector2( -2, -152 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )
centered = false

[node name="pos_2" type="Sprite" parent="positions"]
position = Vector2( 121, -150 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )
centered = false

[node name="cards" type="Node2D" parent="."]

[node name="button" type="Button" parent="."]
margin_right = 203.0
margin_bottom = 315.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
